--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,3 +15,5 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+      - name: Install dependencies
+        run: flutter pub get
