--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,5 @@ jobs:
           channel: 'stable'
       - name: Install dependencies
         run: flutter pub get
+      - name: Verify formatting
+        run: dart format --output=none --set-exit-if-changed .
