--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,3 +19,9 @@ jobs:
         run: flutter pub get
       - name: Verify formatting
         run: dart format --output=none --set-exit-if-changed .
+      - name: Analyze project source
+        run: flutter analyze
+      - name: Run tests
+        run: flutter test
+      - name: Build appbundle
+        run: flutter build appbundle
